--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     "manchesterId": "2643123",
     "wuhanId": "1791247",
     "urlManchester": "http://api.openweathermap.org/data/2.5/weather?id=2643123&appid=d439f6429d800a5e1e5491375e19b2af&units=metric",
-    "urlWuhan": "http://api.openweathermap.org/data/2.5/weather?id=1791247&appid=d439f6429d800a5e1e5491375e19b2af&units=metric"
+    "urlWuhan": "http://api.openweathermap.org/data/2.5/weather?id=1791247&appid=d439f6429d800a5e1e5491375e19b2af&units=metric",
+    "googleapi": "https://maps.googleapis.com/maps/api/js?key=AIzaSyDpHvJ3OmlFeu3pJ3kcGMlR1860aQSepLo"
 }
 
 
